--- a/src/style/index.css
+++ b/src/style/index.css
@@ -704,6 +704,22 @@ header .header_text-container .header_social ul li a i {
   color: #4169e1;
 }
 
+.myWork_ghLink {
+  border: 2px solid #4169e1;
+  border-radius: 30px;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: white;
+  background-color: #4169e1;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+.myWork_ghLink:hover {
+  background-color: white;
+  color: #4169e1;
+}
+
 .contact {
   max-width: 1200px;
   margin: 0 auto;
