fix: center link text,

--- a/src/style/_myWork.scss
+++ b/src/style/_myWork.scss
@@ -124,6 +124,7 @@
     color: white;
     background-color: $main-blue;
     transition: 0.2s linear;
+    text-align: center;
 
     &:hover {
       background-color: white;
