--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -66,7 +66,7 @@ header {
         list-style: none;
         text-align: center;
         cursor: pointer;
-        width: 100px;
+        width: 120px;
         &::after {
           content: "[";
           position: absolute;
@@ -93,6 +93,7 @@ header {
         }
 
         a {
+          display: block;
           width: 100%;
           text-decoration: none;
           color: black;
