--- a/src/style/index.css
+++ b/src/style/index.css
@@ -179,7 +179,7 @@ header nav ul li {
   list-style: none;
   text-align: center;
   cursor: pointer;
-  width: 100px;
+  width: 120px;
 }
 
 header nav ul li::after {
@@ -213,6 +213,7 @@ header nav ul li:hover::before {
 }
 
 header nav ul li a {
+  display: block;
   width: 100%;
   text-decoration: none;
   color: black;
