--- a/src/style/_myWork.scss
+++ b/src/style/_myWork.scss
@@ -34,6 +34,10 @@
         width: 100%;
         max-width: 600px;
         text-align: left;
+        &_status {
+          color: black;
+          font-weight: 500;
+        }
         @media screen and (min-width: 1000px) {
           margin: 0 100px;
         }
