--- a/src/style/index.css
+++ b/src/style/index.css
@@ -219,6 +219,62 @@ header nav ul li a {
   color: black;
 }
 
+header nav ul li a.cv {
+  color: black;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 50%;
+  font-weight: 900;
+  -webkit-transition: 0.15s ease-in;
+  transition: 0.15s ease-in;
+}
+
+header nav ul li a.cv::after {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 80%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 40px;
+  height: 4px;
+  background-color: #4169e1;
+  border-radius: 10px;
+  z-index: -1;
+  -webkit-transition: 0.15s ease-in;
+  transition: 0.15s ease-in;
+}
+
+header nav ul li a.cv::before {
+  position: absolute;
+  content: "";
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 0px;
+  height: 0px;
+  background-color: #4169e1;
+  border-radius: 50%;
+  z-index: -1;
+  -webkit-transition: 0.15s ease-in;
+  transition: 0.15s ease-in;
+}
+
+header nav ul li a.cv:hover {
+  color: white;
+}
+
+header nav ul li a.cv:hover::before {
+  width: 50px;
+  height: 50px;
+}
+
+header nav ul li:nth-last-child(1)::after, header nav ul li:nth-last-child(1)::before {
+  display: none;
+}
+
 header nav .header_btn {
   width: 40px;
   height: 40px;
